<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tijax</string>
    <string name="villages_title">Villages</string>
    <string name="families_title">Families</string>
    <string name="children_title">Children</string>
    <string name="view_button">View Profiles</string>
    <string name="download_button">Download Profiles</string>
    <string name="upload_button">Upload Data</string>
    <string name="authorization_header">Authorization</string>
    <string name="authorization_button">Submit</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="action_settings">Settings</string>
    <string name="download">Download</string>
    <string name="add_family_button_text">Add Family</string>
    <string name="add_child_button_text">Add Child</string>
    <string name="title_activity_add_family">Create Family</string>
    <string name="title_activity_add_child">Create Child</string>

    <!-- Creating family/child -->
    <string name="parent1_header">Parent 1</string>
    <string name="parent2_header">Parent 2</string>
    <string name="child_header">Child</string>
    <string name="first_name_hint">First Name</string>
    <string name="middle_name_hint">Middle Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="gender_hint">Gender</string>
    <string name="type_of_birth_hint">Type of Birth</string>
    <string name="months_gestated_hint">Months Gestated</string>
    <string name="prenatal_control_hint">Prenatal Control</string>
    <string name="birth_weight_hint">Birth Weight</string>
    <string name="make_family_button">Create Family</string>
    <string name="make_child_button">Create Child</string>
    <string name="title_activity_home_page">GuatemalaMedic</string>
    <string name="home_load_db">Load Database</string>
    <string name="home_take_survey">Survey</string>
    <string name="title_activity_survey_form">Survey</string>
    <string name="title_section1">Profile</string>
    <string name="title_section2">Family</string>
    <string name="title_section3">Stats</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="textView_date_picture_updated">Taken Dec 20, 2013</string>
    <string name="textView_deducted_age">Age 9 years, 200 days</string>
    <string name="textView_label_dob">Date Of Birth :</string>
    <string name="textView_label_pob">Place Of Birth:</string>

    <!-- Visit Form Fields -->
    <string name="textView_label_date_of_visit"> Date of Visit: </string>
    <string name="textView_height">Height (cm)</string>
    <string name="textView_weight">Weight (kg)</string>
    <string name="textView_currently_supplements">Currently Supplments?</string>
    <string name="textView_label_is_breastfed">Breastfed?</string>
    <string name="title_activity_take_survey">TakeSurvey</string>
    <string name="action_logout">Logout</string>
    <string name="action_home">Home</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photo_handler">PhotoHandler</string>
    <string name="patients">Patients</string>
    <string name="menugeneral">GenMen</string>
    <string name="gesttime">Gestation Time #Weeks</string>

    <string-array name="employment_array">
        <item>Farmer</item>
        <item>Teacher</item>
        <item>Other</item>
        <item>Father Occupation</item>
    </string-array>
    
    <string-array name="br_array">
        <item>Yes</item>
        <item>No</item>
        <item>Breastfeeding Information(Not Set)</item>
    </string-array>
    <string-array name="t_of_b_array">
        <item>Normal</item>
        <item>Cesaria</item>
        <item>¿Qué Tipo de Parto?</item>
    </string-array>
        <string-array name="prenatal_array">
         <item>Sí</item>
         <item>No</item>
         <item>¿Tenia la Madre Control Prenatal?</item>
     </string-array>   
          <string-array name="type_of_pregnancy_array">
         <item>Solo Uno y Normal</item>
         <item>Solo Uno y Cesaria</item>
         <item>Gemelos y Normal</item>
         <item>Gemelos y Cesaria</item>
        <item>Toca Para Escoger</item>
     </string-array>
    <string-array name="child_visit_array">
        <item>Categoría 1</item>
        <item>Categoría 2</item>
        <item>Categoría 3</item>
        <item>Categoría 4</item>
        <item>Categoría 5</item>
    </string-array>
    <string-array name="family_visit_array">
        <item>Categoría 1</item>
        <item>Categoría 2</item>
    </string-array>
	<string-array name="marital_status_array">
	    <item>Casada</item>
	    <item>Unida</item>
	    <item>Soltera</item>
	    <item>Viuda</item>
	    <item>Toca Para Escoger</item>
	</string-array>
	<string-array name="father_job_array">
	    <item>Fijo</item>
	    <item>Comerciante</item>
	    <item>Agricultor (Propio)</item>
	    <item>Agricultor (Ajeno)</item>
	    <item>Otro</item>
	    <item>Toca Para Escoger</item>
	</string-array>
	<string-array name="month_options">
	    <item>January</item>
	    <item>February</item>
	    <item>March</item>
	    <item>April</item>
	    <item>May</item>
	    <item>June</item>
	    <item>July</item>
	    <item>August</item>
	    <item>September</item>
	    <item>October</item>
	    <item>November</item>
	    <item>December</item>
	</string-array>
	
	<string name="authorization_string">Autorización</string>
	<string name="username_string">Nombre de Usuario</string>
	<string name="password_string">Contraseña</string>
	<string name="continue_button_text">Seguir"</string>
	<string name="cancel_button_text">Cancelar</string>
	
	<!-- HomePageActivity -->
	<string name="home_page_welcome1">Bienvenido Promotores de Salud</string>
	<string name="home_page_welcome2">Rural San Lucas Toliman</string>
	<string name="view_records_button_text">REGISTROS</string>
	<string name="sync_records_button_text">SINCRONIZAR</string>
	<string name="download_records_button_text">DESCARGAR</string>
	
	<string name="download_communities_header_text">Por favor selecta cuales comunidades quieres descargar.</string>
	<string name="search_string">Buscar</string>
	
	


	
	
        <string name="title_activity_view_family">ViewFamily</string>

</resources>
