<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:paddingBottom="50dp"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/main_authorization_top_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="80dp"
	        android:textStyle="bold"
	        android:textSize="40sp" 
	        android:text="@string/authorization_string"/>
	    
	    <EditText 
	        android:id="@+id/authorization_username_edittext"
	        android:layout_width="400dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginTop="40dp"
	        android:textSize="30sp"
	        android:hint="@string/username_string" />
	    
	    <EditText
	        android:id="@+id/authorization_password_edittext"
	        android:inputType="textPassword"
	        android:layout_width="400dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginTop="40dp"
	        android:textSize="30sp"
	        android:hint="@string/password_string" />
	    
	    <Button
	        android:id="@+id/authorization_button"
	        android:layout_width="200dp"
	        android:layout_height="70dp"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:layout_marginTop="40dp"
	        android:textSize="24sp"
	        android:text="@string/continue_button_text" />
	        
	</LinearLayout>
	
</ScrollView>
