<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="@drawable/back" >
        
     	<TextView
	        android:id="@+id/download_communities_header"
	        android:layout_width="fill_parent"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:textSize="24sp"
	        android:text="@string/download_communities_header_text" />
     	
     	<Button
     	    android:id="@+id/download_communities_button"
     	    android:layout_width="200dp"
     	    android:layout_height="80dp"
     	    android:gravity="center"
     	    android:textStyle="bold"
     	    android:textSize="24sp"
     	    android:text="@string/download_records_button_text" />

    </LinearLayout>
    
    <EditText
        android:id="@+id/download_communities_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:hint="@string/search_string" />
    
    <FrameLayout 
        android:id="@+id/container"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />
    

</LinearLayout>
