<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:paddingBottom="50dp"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/home_page_title_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="80dp"
	        android:textStyle="bold"
	        android:textSize="35sp" />
	    
	    <TextView
	        android:id="@+id/home_page_subtitle1_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:textSize="22sp" />
	    
	    <TextView
	        android:id="@+id/home_page_subtitle2_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textSize="22sp" />
	    
	    <Button
	        android:id="@+id/home_page_view_button"
	        android:layout_width="250dp"
	        android:layout_height="70dp"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:layout_marginTop="50dp"
	        android:textSize="24sp"
	        android:text="@string/view_records_button_text" />
	    
	    <Button
	        android:id="@+id/home_page_sync_button"
	        android:layout_width="250dp"
	        android:layout_height="70dp"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:layout_marginTop="30dp"
	        android:textSize="24sp"
	        android:text="@string/sync_records_button_text" />
	    
	    <Button
	        android:id="@+id/home_page_download_button"
	        android:layout_width="250dp"
	        android:layout_height="70dp"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:layout_marginTop="30dp"
	        android:textSize="24sp"
	        android:text="@string/download_records_button_text" />
	     
	</LinearLayout>

</ScrollView>
